# agentic_crm

./: .gitignore  CLAUDE.md  README.md  architecture.md  verify-foundation.ps1  verify-foundation.sh
.claude/: launch.json  settings.local.json
crm-agents/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  seed_data.py
crm-agents/.github/workflows/: ci.yml
crm-agents/context_agent/: Dockerfile  agent.py
crm-agents/guardrails/: Dockerfile  api.py  engine.py
crm-agents/guardrails/input_guardrails/: pii_detector.py  prompt_injection_detector.py
crm-agents/k8s/: serviceaccount.yaml
crm-agents/k8s/context-agent/: deployment.yaml
crm-agents/k8s/guardrails/: deployment.yaml
crm-agents/k8s/memory-agent/: deployment.yaml
crm-agents/k8s/orchestrator/: configmap.yaml  deployment.yaml  secret.yaml
crm-agents/memory_agent/: Dockerfile  agent.py
crm-agents/memory_agent/tools/: episodic_memory_tool.py  procedural_memory_tool.py  semantic_memory_tool.py  working_memory_tool.py
crm-agents/news_research_agent/: Dockerfile  agent.py
crm-agents/news_research_agent/tools/: perplexity_tool.py
crm-agents/orchestrator/: Dockerfile  agent.py  agent_card.json  router.py  task_manager.py
crm-agents/orchestrator/modes/: __init__.py  loop.py  parallel.py  sequential.py
crm-agents/shared/a2a/: client.py  models.py  server.py  task_registry.py
crm-agents/shared/clients/: backend_client.py  guardrails_client.py
crm-agents/shared/config/: settings.py
crm-agents/shared/llm/: __init__.py  gemini_client.py
crm-agents/shared/otel/: setup.py
crm-agents/tests/guardrails/: test_input_guardrails.py
crm-agents/tests/orchestrator/: test_router.py
crm-agents/web_search_agent/: Dockerfile  agent.py
crm-agents/web_search_agent/tools/: search_tool.py
crm-backend/: Dockerfile  README.md  docker-compose.yml  pom.xml
crm-ui/: Dockerfile  (+8 more)
(+116 files in other folders)
